--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -2,31 +2,9 @@
 # defaults file for ansible-guacamole
 guacamole_auth_provider: net.sourceforge.guacamole.net.basic.BasicFileAuthenticationProvider
 
-guacamole_debian_pre_reqs:
-  - build-essential
-  - default-jdk
-  - libavcodec-dev
-  - libavutil-dev
-  - libcairo2-dev
-  - libfreerdp-dev
-  - libjpeg-turbo8-dev
-  - libossp-uuid-dev
-  - libpango1.0-dev
-  - libpng12-dev
-  - libpulse-dev
-  - libssh2-1-dev
-  - libssl-dev
-  - libswscale-dev
-  - libtelnet-dev
-  - libvncserver-dev
-  - libvorbis-dev
-  - libwebp-dev
-  - maven
-  - tomcat7
+guacamole_client_package: "{{ 'guacamole-' + guacamole_version + '.war' }}"
 
-guacamole_client_package: "guacamole-client-{{ guacamole_version }}.tar.gz"
-
-guacamole_dl_url: https://sourceforge.net/projects/guacamole/files/current/source
+guacamole_dl_url: "{{ 'http://apache.org/dyn/closer.cgi?action=download&filename=guacamole/' + guacamole_version }}"
 
 # RDP settings
 guacamole_rdp_color_depth: 24
@@ -35,11 +13,16 @@ guacamole_rdp_height: 900
 guacamole_rdp_width: 1440
 guacamole_rdp_security: rdp
 
+guacamole_redhat_fusion_repos:
+  - https://download1.rpmfusion.org/free/el/rpmfusion-free-release-7.noarch.rpm
+  - https://download1.rpmfusion.org/nonfree/el/rpmfusion-nonfree-release-7.noarch.rpm
+
 guacamole_redhat_pre_reqs:
+  - "{{ guacamole_tomcat }}"
   - cairo-devel
   - ffmpeg-devel
-  - gcc
   - freerdp-devel
+  - gcc
   - libjpeg-turbo-devel
   - libpng-devel
   - libssh2-devel
@@ -47,28 +30,31 @@ guacamole_redhat_pre_reqs:
   - libvncserver-devel
   - libvorbis-devel
   - libwebp-devel
-  - maven
+  # - maven
   - openssl-devel
   - pango-devel
   - pulseaudio-libs-devel
-  - tomcat
   - uuid-devel
 
-guacamole_server_package: "guacamole-server-{{ guacamole_version }}.tar.gz"
+guacamole_server_package: "{{ 'guacamole-server-' + guacamole_version + '.tar.gz' }}"
 
 guacamole_server_port: 4822
 
-guacamole_users: []
-  # - name: user1
-  #   password: password
-  #   connections:
-  #     - host: 10.0.101.50
-  #       name: nas01
-  #       protocol: ssh
-  #       port: 22
-  #     - host: 192.168.250.11
-  #       name: windows2016
-  #       protocol: rdp
-  #       port: 3389
+guacamole_src_dir: /usr/local/src
 
-guacamole_version: 0.9.13-incubating
+guacamole_users: []
+# - name: user1
+#   password: password
+#   connections:
+#     - host: 10.0.101.50
+#       name: nas01
+#       protocol: ssh
+#       port: 22
+#     - host: 192.168.250.11
+#       name: windows2016
+#       protocol: rdp
+#       port: 3389
+
+# Define version to install
+# 0.9.13-incubating | 0.9.14
+guacamole_version: 0.9.14
