--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,8 +1,9 @@
+---
 galaxy_info:
   author: Larry Smith Jr.
   description: An [Ansible](https://www.ansible.com) role to install/configure [Guacamole](https://guacamole.incubator.apache.org/)
 
-  license: license (MIT)
+  license: MIT
 
   min_ansible_version: 1.2
 
@@ -15,6 +16,6 @@ galaxy_info:
         - xenial
 
   galaxy_tags:
-    - remote desktop
+    - remote
 
 dependencies: []
