--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -10,7 +10,6 @@
     - /etc/guacamole
     - /etc/guacamole/lib
     - /etc/guacamole/extensions
-    - "/usr/share/{{ guacamole_tomcat }}/.guacamole/"
 
 - name: config | Configuring guacamole.properties
   template:
@@ -19,7 +18,9 @@
     owner: "{{ guacamole_tomcat }}"
     group: "{{ guacamole_tomcat }}"
   become: true
-  notify: "restart {{ guacamole_tomcat }}"
+  notify:
+    - "restart {{ guacamole_tomcat }}"
+    - restart guacd
 
 - name: config | Configuring user-mapping.xml
   template:
@@ -28,14 +29,18 @@
     owner: "{{ guacamole_tomcat }}"
     group: "{{ guacamole_tomcat }}"
   become: true
-  notify: "restart {{ guacamole_tomcat }}"
+  notify:
+    - "restart {{ guacamole_tomcat }}"
+    - restart guacd
 
 - name: config | Creating Tomcat symlink For guacamole.properties
   file:
-    src: /etc/guacamole/guacamole.properties
-    dest: "/usr/share/{{ guacamole_tomcat }}/.guacamole/guacamole.properties"
+    src: /etc/guacamole
+    dest: "{{ '/usr/share/' + guacamole_tomcat + '/.guacamole' }}"
     state: link
     owner: "{{ guacamole_tomcat }}"
     group: "{{ guacamole_tomcat }}"
   become: true
-  notify: "restart {{ guacamole_tomcat }}"
+  notify:
+    - "restart {{ guacamole_tomcat }}"
+    - restart guacd
