--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,7 +1,20 @@
 ---
 - name: debian | Installing Guacamole Pre-Reqs
   apt:
-    name: "{{ item }}"
+    name: "{{ guacamole_debian_pre_reqs }}"
     state: present
   become: true
-  with_items: "{{ guacamole_debian_pre_reqs }}"
+  register: result
+  until: result is successful
+
+# - name: debian | Configuring Tomcat Default Config
+#   template:
+#     src: "{{ 'etc/default/' + guacamole_tomcat + '.j2' }}"
+#     dest: "{{ '/etc/default/' + guacamole_tomcat }}"
+#     owner: root
+#     group: root
+#     mode: u=rw,g=r,o=r
+#   become: true
+#   notify:
+#     - "restart {{ guacamole_tomcat }}"
+#     - restart guacd
