--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ env:
   # - distribution: fedora
   #   init: /usr/lib/systemd/systemd
   #   version: 24
-  - distribution: ubuntu
-    init: /lib/systemd/systemd
-    version: bionic
+  # - distribution: ubuntu
+  #   init: /lib/systemd/systemd
+  #   version: bionic
   - distribution: ubuntu
     init: /lib/systemd/systemd
     version: xenial
