--- a/tasks/client.yml
+++ b/tasks/client.yml
@@ -9,10 +9,16 @@
   file:
     src: /etc/guacamole/guacamole.war
     dest: "{{ '/var/lib/' + guacamole_tomcat + '/webapps/guacamole.war' }}"
-    owner: "{{ guacamole_tomcat }}"
-    group: "{{ guacamole_tomcat }}"
     state: link
   become: true
   notify:
     - "restart {{ guacamole_tomcat }}"
     - restart guacd
+
+# Moving here to ensure idempotency as it was failing when included above
+- name: client | Setting Permissions On Tomcat Symlink For {{ 'guacamole-' + guacamole_version + '.war' }}
+  file:
+    path: /etc/guacamole/guacamole.war
+    owner: "{{ guacamole_tomcat }}"
+    group: "{{ guacamole_tomcat }}"
+  become: true
