--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -42,15 +42,15 @@ platforms:
       - /tmp
     volumes:
       - /sys/fs/cgroup:/sys/fs/cgroup:ro
-  - name: debian10
-    image: jrei/systemd-debian:10
-    privileged: true
-    command: /lib/systemd/systemd
-    tmpfs:
-      - /run
-      - /tmp
-    volumes:
-      - /sys/fs/cgroup:/sys/fs/cgroup:ro
+  # - name: debian10
+  #   image: jrei/systemd-debian:10
+  #   privileged: true
+  #   command: /lib/systemd/systemd
+  #   tmpfs:
+  #     - /run
+  #     - /tmp
+  #   volumes:
+  #     - /sys/fs/cgroup:/sys/fs/cgroup:ro
   # - name: fedora
   #   image: jrei/systemd-fedora
   #   privileged: true
