--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -29,7 +29,7 @@ jobs:
           molecule test --scenario-name centos7
           # molecule test --scenario-name centos8
           # molecule test --scenario-name debian8
-          molecule test --scenario-name debian9
+          # molecule test --scenario-name debian9
           molecule test --scenario-name debian10
           molecule test --scenario-name fedora
           molecule test --scenario-name ubuntu1604
