--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,7 @@ molecule:
     - molecule test --scenario-name centos7
     # - molecule test --scenario-name centos8
     # - molecule test --scenario-name debian8
-    - molecule test --scenario-name debian9
+    # - molecule test --scenario-name debian9
     - molecule test --scenario-name debian10
     - molecule test --scenario-name fedora
     - molecule test --scenario-name ubuntu1604
