Disabled Debian 10 testing
- Looks like there is an issue with Debian 10 working for now

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ molecule:
     # - molecule test --scenario-name centos8
     # - molecule test --scenario-name debian8
     # - molecule test --scenario-name debian9
-    - molecule test --scenario-name debian10
+    # - molecule test --scenario-name debian10
     - molecule test --scenario-name fedora
     - molecule test --scenario-name ubuntu1604
     - molecule test --scenario-name ubuntu1804
