--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
   # - molecule test --scenario-name centos8
   # - molecule test --scenario-name debian8
   # - molecule test --scenario-name debian9
-  - molecule test --scenario-name debian10
+  # - molecule test --scenario-name debian10
   - molecule test --scenario-name fedora
   - molecule test --scenario-name ubuntu1604
   - molecule test --scenario-name ubuntu1804
