molecule/ansible-lint exclude markers

--- a/tasks/config.yml
+++ b/tasks/config.yml
@@ -62,7 +62,7 @@
 
 - name: config | Copying MySQL Connector
   copy:
-    src: "{{ guacamole_src_dir + '/' + 'mysql-connector-java-' + guacamole_mysql_connector_version + '/' +'mysql-connector-java-' + guacamole_mysql_connector_version + '.jar' }}"
+    src: "{{ guacamole_src_dir + '/' + 'mysql-connector-java-' + guacamole_mysql_connector_version + '/' +'mysql-connector-java-' + guacamole_mysql_connector_version + '.jar' }}" # noqa 204
     dest: /etc/guacamole/lib/
     owner: "{{ guacamole_tomcat }}"
     group: "{{ guacamole_tomcat }}"
@@ -116,7 +116,7 @@
     not _guacamole_db_populated_check['stat']['exists']
 
 - name: config | Marking DB As Populated
-  file:
+  file: # noqa 503
     path: /etc/guacamole/.db_populated
     state: touch
   become: true
