Added: Handler to kill guacd before restart
Restarting guacd was causing issues with hanging and failing

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,9 @@
 ---
 # handlers file for ansible-guacamole
+- name: kill guacd
+  command: killall guacd
+  become: true
+
 - name: restart guacd
   service:
     name: guacd
