--- a/playbook_proxy.yml
+++ b/playbook_proxy.yml
@@ -3,8 +3,7 @@
   hosts: all
   vars:
     guacamole_mysql_auth: false
-    guacamole_https_enabled: true
-    guacamole_https_proxies: '127.0.0.1'
+    guacamole_proxy_adresses: '127.0.0.1'
   roles:
     - role: ansible-mysql
       when: guacamole_mysql_auth|bool
