--- a/molecule/shared/converge.yml
+++ b/molecule/shared/converge.yml
@@ -2,6 +2,6 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include ansible-guacamole"
+    - name: Include ansible-guacamole
       include_role:
-        name: "ansible-guacamole"
+        name: ansible-guacamole
