--- a/playbook.yml
+++ b/playbook.yml
@@ -1,9 +1,7 @@
 ---
 - name: Example Playbook
   hosts: all
-  vars:
-    guacamole_mysql_auth: false
-  roles:
-    - role: ansible-mysql
-      when: guacamole_mysql_auth|bool
-    - role: ansible-guacamole
+  tasks:
+    - name: Include ansible-guacamole
+      include_role:
+        name: ansible-guacamole
