Disabled failing distros
Will add these later

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -9,11 +9,11 @@ galaxy_info:
   min_ansible_version: 2.5
 
   platforms:
-    - name: Debian
-      versions:
-        - buster
-        - jessie
-        - stretch
+    # - name: Debian
+    #   versions:
+    #     - buster
+    #     - jessie
+    #     - stretch
     - name: EL
       versions:
         - 7
