--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -10,14 +10,14 @@ jobs:
       matrix:
         molecule_distro:
           - centos7
-          - centos8
-          - debian8
-          - debian9
-          - debian10
-          - fedora
+          # - centos8
+          # - debian8
+          # - debian9
+          # - debian10
+          # - fedora
           - ubuntu1604
           - ubuntu1804
-          - ubuntu2004
+          # - ubuntu2004
 
     steps:
       - uses: actions/checkout@v2
