--- a/tasks/set_facts.yml
+++ b/tasks/set_facts.yml
@@ -171,5 +171,6 @@
       - pango-devel
       - pulseaudio-libs-devel
       - uuid-devel
+      - google-droid-sans-mono-fonts
   when:
     - ansible_os_family == "RedHat"
