--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -28,6 +28,15 @@ guacamole_mysql_connector_dl_url: https://dev.mysql.com/get/Downloads/Connector-
 
 guacamole_mysql_connector_version: 8.0.13
 
+# Defines if PostgreSQL DB should be used for authentication
+guacamole_postgresql_auth: false
+
+guacamole_postgresql_connector_package: "{{ guacamole_postgresql_connector_dl_url + 'postgresql-' + guacamole_postgresql_connector_version + '.jar' }}"
+
+guacamole_postgresql_connector_dl_url: https://jdbc.postgresql.org/download/
+
+guacamole_postgresql_connector_version: 42.2.20
+
 # Define MySQL DB Info
 guacamole_mysql_db:
   name: guacamole
@@ -35,6 +44,15 @@ guacamole_mysql_db:
   port: 3306
   username: guacamole
   password: guacamole
+
+# Define PostgreSQL DB Info
+guacamole_postgresql_db:
+  name: guacamole
+  host: localhost
+  port: 5432
+  username: guacamole
+  password: guacamole
+  auto-create-accounts: true
 
 # Define OpenID Info
 guacamole_openid:
