--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,88 +1,74 @@
-ansible-base==2.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-ansible-lint==5.0.7; python_version >= "3.6"
-ansible==3.3.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-appdirs==1.4.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-arrow==1.1.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-astroid==2.5.6; python_version >= "3.6" and python_version < "4.0"
-autopep8==1.5.7
-bcrypt==3.2.0; python_version >= "3.6"
-binaryornot==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-bracex==2.1.1; python_version >= "3.6"
-cerberus==1.3.3; python_version >= "3.6"
-certifi==2020.12.5; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-cffi==1.14.5; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-chardet==4.0.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-click-completion==0.5.2; python_version >= "3.6"
-click-help-colors==0.9; python_version >= "3.6"
-click==7.1.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-colorama==0.4.4; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" and sys_platform == "win32" and platform_system == "Windows" or python_version >= "3.6" and python_version < "4.0" and sys_platform == "win32" and python_full_version >= "3.5.0" and platform_system == "Windows"
-commonmark==0.9.1; python_version >= "3.6" and python_version < "4.0"
-cookiecutter==1.7.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-cryptography==3.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-distlib==0.3.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-distro==1.5.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "linux" or python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "linux2" or sys_platform == "linux" and python_version >= "3.6" and python_full_version >= "3.4.0" or sys_platform == "linux2" and python_version >= "3.6" and python_full_version >= "3.4.0"
-docker==4.4.4; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-enrich==1.2.6; python_version >= "3.6"
-filelock==3.0.12; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-flake8==3.9.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-future==0.18.2; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.3.0" and python_version >= "3.5"
-idna==2.10; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-importlib-metadata==4.0.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.6"
-isort==5.8.0; python_version >= "3.6" and python_version < "4.0"
-jinja2-time==0.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-jinja2==2.11.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-joblib==1.0.1; python_version >= "3.6"
-lazy-object-proxy==1.6.0; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.6.0"
-livereload==2.6.3; python_version >= "3.5"
-lunr==0.5.8; python_version >= "3.5"
-markdown==3.3.4; python_version >= "3.6"
-markupsafe==1.1.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-mccabe==0.6.1; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.5.0"
-mkdocs==1.1.2; python_version >= "3.5"
-molecule-docker==0.3.3; python_version >= "3.6"
-molecule==3.3.0; python_version >= "3.6"
-nltk==3.6.2; python_version >= "3.5"
-packaging==20.9; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-paramiko==2.7.2; python_version >= "3.6"
-pathspec==0.8.1; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.5"
-pep517==0.10.0; python_version >= "3.6"
-pip-tools==6.1.0; python_version >= "3.6"
-pluggy==0.13.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-poyo==0.5.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-py==1.10.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-pycodestyle==2.7.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
-pycparser==2.20; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pyflakes==2.3.1; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-pygments==2.8.1; python_version >= "3.6" and python_version < "4.0"
-pylint==2.8.2; python_version >= "3.6" and python_version < "4.0"
-pynacl==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pyparsing==2.4.7; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-python-dateutil==2.8.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-python-slugify==4.0.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-pywin32==227; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or python_full_version >= "3.5.0" and sys_platform == "win32" and python_version >= "3.6"
-pyyaml==5.4.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
-regex==2021.4.4; python_version >= "3.5"
-requests==2.25.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-rich==10.1.0; python_version >= "3.6" and python_version < "4.0"
-robotframework==4.0.1
-ruamel.yaml.clib==0.2.2; platform_python_implementation == "CPython" and python_version < "3.10" and python_version >= "3.7"
-ruamel.yaml==0.17.4; python_version >= "3.7"
-selinux==0.2.1; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "linux" or python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "linux2" or sys_platform == "linux" and python_version >= "3.6" and python_full_version >= "3.4.0" or sys_platform == "linux2" and python_version >= "3.6" and python_full_version >= "3.4.0"
-shellingham==1.4.0; python_version >= "3.6"
-six==1.15.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-subprocess-tee==0.3.1; python_version >= "3.6"
-tenacity==7.0.0; python_version >= "3.6"
-text-unidecode==1.3; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "4.0" or python_version >= "3.6" and python_version < "4.0" and python_full_version >= "3.5.0"
-tornado==6.1; python_version >= "3.5"
-tox==3.23.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
-tqdm==4.60.0; python_version >= "3.5" and python_full_version < "3.0.0" or python_version >= "3.5" and python_full_version >= "3.4.0"
-typed-ast==1.4.3; implementation_name == "cpython" and python_version < "3.8" and python_version >= "3.6"
-typing-extensions==3.7.4.3; python_version < "3.8" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.6")
-urllib3==1.26.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version < "4"
-virtualenv==20.4.4; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0"
-wcmatch==8.1.2; python_version >= "3.6"
-websocket-client==0.58.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_version >= "3.6" and python_full_version >= "3.5.0"
-wrapt==1.12.1; python_version >= "3.6" and python_version < "4.0"
-yamllint==1.26.1; python_version >= "3.5"
-zipp==3.4.1; python_version < "3.8" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" and python_version < "3.8" or python_full_version >= "3.5.0" and python_version < "3.8" and python_version >= "3.6")
+ansible-compat==3.0.2 ; python_version >= "3.9" and python_version < "4.0"
+ansible-core==2.15.1 ; python_version >= "3.9" and python_version < "4.0"
+ansible-lint==6.16.2 ; python_version >= "3.9" and python_version < "4.0" and platform_system != "Windows"
+ansible==8.0.0 ; python_version >= "3.9" and python_version < "4.0"
+arrow==1.2.3 ; python_version >= "3.9" and python_version < "4.0"
+astroid==2.15.5 ; python_version >= "3.9" and python_version < "4.0"
+attrs==23.1.0 ; python_version >= "3.9" and python_version < "4.0"
+binaryornot==0.4.4 ; python_version >= "3.9" and python_version < "4.0"
+black==22.12.0 ; python_version >= "3.9" and python_version < "4.0"
+bracex==2.3.post1 ; python_version >= "3.9" and python_version < "4.0" and platform_system != "Windows"
+certifi==2023.5.7 ; python_version >= "3.9" and python_version < "4.0"
+cffi==1.15.1 ; python_version >= "3.9" and python_version < "4.0"
+cfgv==3.3.1 ; python_version >= "3.9" and python_version < "4.0"
+chardet==5.1.0 ; python_version >= "3.9" and python_version < "4.0"
+charset-normalizer==3.1.0 ; python_version >= "3.9" and python_version < "4.0"
+click-help-colors==0.9.1 ; python_version >= "3.9" and python_version < "4.0"
+click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
+cookiecutter==2.1.1 ; python_version >= "3.9" and python_version < "4.0"
+cryptography==41.0.1 ; python_version >= "3.9" and python_version < "4.0"
+dill==0.3.6 ; python_version >= "3.9" and python_version < "4.0"
+distlib==0.3.6 ; python_version >= "3.9" and python_version < "4.0"
+enrich==1.2.7 ; python_version >= "3.9" and python_version < "4.0"
+filelock==3.12.2 ; python_version >= "3.9" and python_version < "4.0"
+flake8==6.0.0 ; python_version >= "3.9" and python_version < "4.0"
+identify==2.5.24 ; python_version >= "3.9" and python_version < "4.0"
+idna==3.4 ; python_version >= "3.9" and python_version < "4.0"
+importlib-resources==5.0.7 ; python_version >= "3.9" and python_version < "3.10"
+isort==5.12.0 ; python_version >= "3.9" and python_version < "4.0"
+jinja2-time==0.2.0 ; python_version >= "3.9" and python_version < "4.0"
+jinja2==3.1.2 ; python_version >= "3.9" and python_version < "4.0"
+jsonschema==4.17.3 ; python_version >= "3.9" and python_version < "4.0"
+lazy-object-proxy==1.9.0 ; python_version >= "3.9" and python_version < "4.0"
+markdown-it-py==3.0.0 ; python_version >= "3.9" and python_version < "4.0"
+markupsafe==2.1.3 ; python_version >= "3.9" and python_version < "4.0"
+mccabe==0.7.0 ; python_version >= "3.9" and python_version < "4.0"
+mdurl==0.1.2 ; python_version >= "3.9" and python_version < "4.0"
+molecule-plugins[vagrant]==23.4.1 ; python_version >= "3.9" and python_version < "4.0"
+molecule==5.0.1 ; python_version >= "3.9" and python_version < "4.0"
+molecule[docker]==5.0.1 ; python_version >= "3.9" and python_version < "4.0"
+mypy-extensions==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+nodeenv==1.8.0 ; python_version >= "3.9" and python_version < "4.0"
+packaging==23.1 ; python_version >= "3.9" and python_version < "4.0"
+pathspec==0.11.1 ; python_version >= "3.9" and python_version < "4.0"
+platformdirs==3.6.0 ; python_version >= "3.9" and python_version < "4.0"
+pluggy==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+pre-commit==2.21.0 ; python_version >= "3.9" and python_version < "4.0"
+pycodestyle==2.10.0 ; python_version >= "3.9" and python_version < "4.0"
+pycparser==2.21 ; python_version >= "3.9" and python_version < "4.0"
+pyflakes==3.0.1 ; python_version >= "3.9" and python_version < "4.0"
+pygments==2.15.1 ; python_version >= "3.9" and python_version < "4.0"
+pylint==2.17.4 ; python_version >= "3.9" and python_version < "4.0"
+pyrsistent==0.19.3 ; python_version >= "3.9" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
+python-slugify==8.0.1 ; python_version >= "3.9" and python_version < "4.0"
+python-vagrant==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
+pyyaml==6.0 ; python_version >= "3.9" and python_version < "4.0"
+requests==2.31.0 ; python_version >= "3.9" and python_version < "4.0"
+resolvelib==1.0.1 ; python_version >= "3.9" and python_version < "4.0"
+rich==13.4.2 ; python_version >= "3.9" and python_version < "4.0"
+ruamel-yaml-clib==0.2.7 ; platform_python_implementation == "CPython" and python_version < "3.12" and python_version >= "3.9" and platform_system != "Windows"
+ruamel-yaml==0.17.32 ; python_version >= "3.9" and python_version < "4.0" and platform_system != "Windows"
+setuptools==68.0.0 ; python_version >= "3.9" and python_version < "4.0"
+six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+subprocess-tee==0.4.1 ; python_version >= "3.9" and python_version < "4.0"
+text-unidecode==1.3 ; python_version >= "3.9" and python_version < "4.0"
+tomli==2.0.1 ; python_version >= "3.9" and python_full_version < "3.11.0a7"
+tomlkit==0.11.8 ; python_version >= "3.9" and python_version < "4.0"
+typing-extensions==4.6.3 ; python_version >= "3.9" and python_version < "3.11"
+urllib3==2.0.3 ; python_version >= "3.9" and python_version < "4.0"
+virtualenv==20.23.1 ; python_version >= "3.9" and python_version < "4.0"
+wcmatch==8.4.1 ; python_version >= "3.9" and python_version < "4.0" and platform_system != "Windows"
+wrapt==1.15.0 ; python_version >= "3.9" and python_version < "4.0"
+yamllint==1.32.0 ; python_version >= "3.9" and python_version < "4.0" and platform_system != "Windows"
