--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,35 +1,35 @@
 ---
 # handlers file for ansible-guacamole
-- name: kill guacd
-  command: pkill guacd
+- name: kill guacd # noqa no-changed-when
+  ansible.builtin.command: pkill guacd
   become: true
 
 - name: restart guacd
-  service:
+  ansible.builtin.service:
     name: guacd
     state: restarted
   become: true
 
 - name: restart tomcat
-  service:
+  ansible.builtin.service:
     name: tomcat
     state: restarted
   become: true
 
 - name: restart tomcat7
-  service:
+  ansible.builtin.service:
     name: tomcat7
     state: restarted
   become: true
 
 - name: restart tomcat8
-  service:
+  ansible.builtin.service:
     name: tomcat8
     state: restarted
   become: true
 
 - name: restart tomcat9
-  service:
+  ansible.builtin.service:
     name: tomcat9
     state: restarted
   become: true
