--- a/meta/main.yml
+++ b/meta/main.yml
@@ -6,7 +6,7 @@ galaxy_info:
   role_name: guacamole
   namespace: mrlesmithjr
 
-  min_ansible_version: 2.5
+  min_ansible_version: "2.5"
 
   platforms:
     # - name: Debian
@@ -16,7 +16,7 @@ galaxy_info:
     #     - stretch
     - name: EL
       versions:
-        - 7
+        - all
     - name: Ubuntu
       versions:
         - bionic
