--- a/tasks/services.yml
+++ b/tasks/services.yml
@@ -1,6 +1,6 @@
 ---
 - name: services | Ensuring Guacamole Server Service Is Enabled And Starts On Boot
-  service:
+  ansible.builtin.service:
     name: guacd
     enabled: true
     state: started
