--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -20,20 +20,20 @@ jobs:
         molecule_distro:
           # - alpine313
           # - alpine314
-          - centos7
+          # - centos7
           # - centos8
           # - debian8
           # - debian9
           # - debian10
-          - debian11
+          # - debian11
           # - fedora
           # - fedora34
           # - fedora35
           # - rocky8
-          - ubuntu1604
+          # - ubuntu1604
           - ubuntu1804
           - ubuntu2004
-          - ubuntu2204
+          # - ubuntu2204
         python-version: [3.9]
 
     steps:
