Support multiple guacamole backend at the same time
- mysql (or postgres) database is not replacing the user-mapping
- both (or even all backend) can be used at the same time (for testing i was able to use ldap, mysql and user-mapping backend with the same account in guacamole

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -81,7 +81,7 @@ guacamole_server_package: "{{ 'guacamole-server-' + guacamole_version + '.tar.gz
 
 guacamole_server_port: 4822
 
-#guacamole_basic_user_mapping: /etc/guacamole/user-mapping.xml
+guacamole_basic_user_mapping: /etc/guacamole/user-mapping.xml
 
 guacamole_src_dir: /usr/local/src
 
